<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
android:background="@color/colorBlue1"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_left_menu0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorBlue"
        android:onClick="clickLeft0"
        android:text="@string/btn0_left_menu" />

    <Button
        android:id="@+id/btn_left_menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorBlue"
        android:onClick="clickLeft1"
        android:text="@string/btn1_left_menu" />

    <Button
        android:id="@+id/btn_left_menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorBlue"
        android:onClick="clickLeft2"
        android:text="@string/btn2_left_menu" />
</LinearLayout>
