<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@color/colorAccent1"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_right_menu0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"

        android:background="@color/colorAccent"
        android:onClick="clickRight0"
        android:text="@string/btn0_right_menu" />

    <Button
        android:id="@+id/btn_right_menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:onClick="clickRight1"
        android:text="@string/btn1_right_menu" />

    <Button
        android:id="@+id/btn_right_menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:onClick="clickRight2"
        android:text="@string/btn2_right_menu" />
</LinearLayout>
